Solve11/task3/1deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: app
  namespace: netology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.19
        ports:
          - containerPort: 80
        volumeMounts:
          - name: config-one
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: config-one
        configMap:
          name: config-one
---
apiVersion: v1
kind: Service
metadata:
  name: svc
  namespace: netology  
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app
